tests/snapshots/tiebreak__tiebreak_default.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"  ac                                                                            "
"  ab                                                                            "
"  c                                                                             "
"> a                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
