tests/snapshots/tiebreak__tiebreak_default@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"a\", \"c\", \"ab\", \"ac\", \"b\"]\noptions: --tiebreak=score,begin,end"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"  ac                                                                            "
"  ab                                                                            "
"  c                                                                             "
"> a                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
