tests/snapshots/tiebreak__tiebreak_default@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"a\", \"c\", \"ab\", \"ac\", \"b\"]\noptions: --tiebreak=score,begin,end\nafter:\n  @char 'b'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ab                                                                            "
"> b                                                                             "
"  2/5                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
