tests/snapshots/tiebreak__tiebreak_end.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  aba                                                                           "
"  c                                                                             "
"  b                                                                             "
"> aaba                                                                          "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
