tests/snapshots/tiebreak__tiebreak_index@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"a\", \"c\", \"ab\", \"ac\", \"b\"]\noptions: --tiebreak=index,score\nafter:\n  @char 'b'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"> ab                                                                            "
"  2/5                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
