tests/snapshots/tiebreak__tiebreak_length.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aaba                                                                          "
"  aba                                                                           "
"  ac                                                                            "
"  c                                                                             "
"> b                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
